Working on personal page

--- a/cohorts/1/emily.html
+++ b/cohorts/1/emily.html
@@ -2,65 +2,168 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="emily.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
-    <title>About Emily</title>
+    <title>Marlene</title>
+    <link rel="stylesheet" href="index.css" />
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&display=swap" rel="stylesheet" />
+    <script src="https://use.fontawesome.com/d1341f9b7a.js"></script>
 </head>
 
 <body>
+    <!--Text Animation Start-->
+    <div class="container">
+        <span class="TopText">Meet The Team</span>
+        <span class="BottomText">Marlene Garcia</span>
+    </div>
+    <!--Text Animation End-->
     <header>
-        <nav>
-            <ul class="menu">
-                <li class="logo"><a href="#">Hypertext Assassins</a></li>
-                <li class="item"><a href="./index.html">Home</a></li>
-                <!-- <li class="item"><a href="#">About</a></li> -->
-                <li class="item has-submenu">
-                    <a tabindex="0">Members</a>
-                    <ul class="submenu">
-                        <li class="subitem"><a href="emily.html">Emily</a></li>
-                        <li class="subitem"><a href="marlene.html">Marlene</a></li>
-                        <li class="subitem"><a href="kirtana.html">Kirtana</a></li>
-                        <li class="subitem"><a href="eashan.html">Eashan</a></li>
-                        <li class="subitem"><a href="carsen.html">Carsen</a></li>
-                        <li class="subitem"><a href="isha.html">Isha</a></li>
-                    </ul>
+        <nav class="navbar">
+            <ul class="navbar-nav">
+                <li class="logo">
+                    <a href="index.html" class="nav-link">
+                        <span class="link-text">Hypertext Assassins</span>
+                        <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="fire-alt"
+                            class="svg-inline--fa fa-fire-alt fa-w-14" role="img" xmlns="http://www.w3.org/2000/svg"
+                            viewBox="0 0 448 512">
+                            <path fill="currentColor"
+                                d="M323.56 51.2c-20.8 19.3-39.58 39.59-56.22 59.97C240.08 73.62 206.28 35.53 168 0 69.74 91.17 0 209.96 0 281.6 0 408.85 100.29 512 224 512s224-103.15 224-230.4c0-53.27-51.98-163.14-124.44-230.4zm-19.47 340.65C282.43 407.01 255.72 416 226.86 416 154.71 416 96 368.26 96 290.75c0-38.61 24.31-72.63 72.79-130.75 6.93 7.98 98.83 125.34 98.83 125.34l58.63-66.88c4.14 6.85 7.91 13.55 11.27 19.97 27.35 52.19 15.81 118.97-33.43 153.42z">
+                            </path>
+                        </svg>
+                    </a>
                 </li>
-                <!-- <li class="item has-submenu">
-                    <a tabindex="0">Projects</a>
-                    <ul class="submenu">
-                        <li class="subitem"><a href="#">Flying Bird</a></li>
-                        <li class="subitem"><a href="#">Falling Bird</a></li>
-                        <li class="subitem"><a href="#">Another Project</a></li>
-                    </ul> -->
+                <li class="nav-item">
+                    <a href="carsen.html" class="nav-link">
+                        <span class="link-text">Carsen</span>
+                        <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="fire-alt"
+                            class="svg-inline--fa fa-fire-alt fa-w-14" role="img" xmlns="http://www.w3.org/2000/svg"
+                            viewBox="0 0 448 512">
+                            <path fill="currentColor"
+                                d="M323.56 51.2c-20.8 19.3-39.58 39.59-56.22 59.97C240.08 73.62 206.28 35.53 168 0 69.74 91.17 0 209.96 0 281.6 0 408.85 100.29 512 224 512s224-103.15 224-230.4c0-53.27-51.98-163.14-124.44-230.4zm-19.47 340.65C282.43 407.01 255.72 416 226.86 416 154.71 416 96 368.26 96 290.75c0-38.61 24.31-72.63 72.79-130.75 6.93 7.98 98.83 125.34 98.83 125.34l58.63-66.88c4.14 6.85 7.91 13.55 11.27 19.97 27.35 52.19 15.81 118.97-33.43 153.42z">
+                            </path>
+                        </svg>
+                    </a>
                 </li>
-                <!-- <li class="item"><a href="#">Blog</a></li>
-                <li class="item"><a href="#">Contact</a>
-                <li class="item button"><a href="#">Log In</a></li>
-                <li class="item button secondary"><a href="#">Sign Up</a></li> -->
-                <li class="toggle"><a href="#"><i class="fas fa-bars"></i></a></li>
+                <li class="nav-item">
+                    <a href="eashan.html" class="nav-link">
+                        <span class="link-text">Eashan</span>
+                        <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="fire-alt"
+                            class="svg-inline--fa fa-fire-alt fa-w-14" role="img" xmlns="http://www.w3.org/2000/svg"
+                            viewBox="0 0 448 512">
+                            <path fill="currentColor"
+                                d="M323.56 51.2c-20.8 19.3-39.58 39.59-56.22 59.97C240.08 73.62 206.28 35.53 168 0 69.74 91.17 0 209.96 0 281.6 0 408.85 100.29 512 224 512s224-103.15 224-230.4c0-53.27-51.98-163.14-124.44-230.4zm-19.47 340.65C282.43 407.01 255.72 416 226.86 416 154.71 416 96 368.26 96 290.75c0-38.61 24.31-72.63 72.79-130.75 6.93 7.98 98.83 125.34 98.83 125.34l58.63-66.88c4.14 6.85 7.91 13.55 11.27 19.97 27.35 52.19 15.81 118.97-33.43 153.42z">
+                            </path>
+                        </svg>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="emily.html" class="nav-link">
+                        <span class="link-text">Emily</span>
+                        <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="fire-alt"
+                            class="svg-inline--fa fa-fire-alt fa-w-14" role="img" xmlns="http://www.w3.org/2000/svg"
+                            viewBox="0 0 448 512">
+                            <path fill="currentColor"
+                                d="M323.56 51.2c-20.8 19.3-39.58 39.59-56.22 59.97C240.08 73.62 206.28 35.53 168 0 69.74 91.17 0 209.96 0 281.6 0 408.85 100.29 512 224 512s224-103.15 224-230.4c0-53.27-51.98-163.14-124.44-230.4zm-19.47 340.65C282.43 407.01 255.72 416 226.86 416 154.71 416 96 368.26 96 290.75c0-38.61 24.31-72.63 72.79-130.75 6.93 7.98 98.83 125.34 98.83 125.34l58.63-66.88c4.14 6.85 7.91 13.55 11.27 19.97 27.35 52.19 15.81 118.97-33.43 153.42z">
+                            </path>
+                        </svg>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="isha.html" class="nav-link">
+                        <span class="link-text">Isha</span>
+                        <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="fire-alt"
+                            class="svg-inline--fa fa-fire-alt fa-w-14" role="img" xmlns="http://www.w3.org/2000/svg"
+                            viewBox="0 0 448 512">
+                            <path fill="currentColor"
+                                d="M323.56 51.2c-20.8 19.3-39.58 39.59-56.22 59.97C240.08 73.62 206.28 35.53 168 0 69.74 91.17 0 209.96 0 281.6 0 408.85 100.29 512 224 512s224-103.15 224-230.4c0-53.27-51.98-163.14-124.44-230.4zm-19.47 340.65C282.43 407.01 255.72 416 226.86 416 154.71 416 96 368.26 96 290.75c0-38.61 24.31-72.63 72.79-130.75 6.93 7.98 98.83 125.34 98.83 125.34l58.63-66.88c4.14 6.85 7.91 13.55 11.27 19.97 27.35 52.19 15.81 118.97-33.43 153.42z">
+                            </path>
+                        </svg>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="kirtana.html" class="nav-link">
+                        <span class="link-text">Kirtana</span>
+                        <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="fire-alt"
+                            class="svg-inline--fa fa-fire-alt fa-w-14" role="img" xmlns="http://www.w3.org/2000/svg"
+                            viewBox="0 0 448 512">
+                            <path fill="currentColor"
+                                d="M323.56 51.2c-20.8 19.3-39.58 39.59-56.22 59.97C240.08 73.62 206.28 35.53 168 0 69.74 91.17 0 209.96 0 281.6 0 408.85 100.29 512 224 512s224-103.15 224-230.4c0-53.27-51.98-163.14-124.44-230.4zm-19.47 340.65C282.43 407.01 255.72 416 226.86 416 154.71 416 96 368.26 96 290.75c0-38.61 24.31-72.63 72.79-130.75 6.93 7.98 98.83 125.34 98.83 125.34l58.63-66.88c4.14 6.85 7.91 13.55 11.27 19.97 27.35 52.19 15.81 118.97-33.43 153.42z">
+                            </path>
+                        </svg>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="marlene.html" class="nav-link">
+                        <span class="link-text">Marlene</span>
+                        <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="fire-alt"
+                            class="svg-inline--fa fa-fire-alt fa-w-14" role="img" xmlns="http://www.w3.org/2000/svg"
+                            viewBox="0 0 448 512">
+                            <path fill="currentColor"
+                                d="M323.56 51.2c-20.8 19.3-39.58 39.59-56.22 59.97C240.08 73.62 206.28 35.53 168 0 69.74 91.17 0 209.96 0 281.6 0 408.85 100.29 512 224 512s224-103.15 224-230.4c0-53.27-51.98-163.14-124.44-230.4zm-19.47 340.65C282.43 407.01 255.72 416 226.86 416 154.71 416 96 368.26 96 290.75c0-38.61 24.31-72.63 72.79-130.75 6.93 7.98 98.83 125.34 98.83 125.34l58.63-66.88c4.14 6.85 7.91 13.55 11.27 19.97 27.35 52.19 15.81 118.97-33.43 153.42z">
+                            </path>
+                        </svg>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="contactUs.html" class="nav-link">
+                        <span class="link-text">Contact Us</span>
+                        <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="fire-alt"
+                            class="svg-inline--fa fa-fire-alt fa-w-14" role="img" xmlns="http://www.w3.org/2000/svg"
+                            viewBox="0 0 448 512">
+                            <path fill="currentColor"
+                                d="M323.56 51.2c-20.8 19.3-39.58 39.59-56.22 59.97C240.08 73.62 206.28 35.53 168 0 69.74 91.17 0 209.96 0 281.6 0 408.85 100.29 512 224 512s224-103.15 224-230.4c0-53.27-51.98-163.14-124.44-230.4zm-19.47 340.65C282.43 407.01 255.72 416 226.86 416 154.71 416 96 368.26 96 290.75c0-38.61 24.31-72.63 72.79-130.75 6.93 7.98 98.83 125.34 98.83 125.34l58.63-66.88c4.14 6.85 7.91 13.55 11.27 19.97 27.35 52.19 15.81 118.97-33.43 153.42z">
+                            </path>
+                        </svg>
+                    </a>
+                </li>
             </ul>
         </nav>
     </header>
-    
-    <div class="about">
-        <div class="aboutImg">
-            <img class="memberImg" src="./assets/EmilyPhoto.jpg"/>
+    <main>
+        <!-- <h1>Title lipsum</h1> -->
+        <!-- <ul id="info">
+            <div id="calciferBoi">
+                <img src="./assets/calcifer/one.png">
+            </div>
+            <div id="infoColor">
+                <div id="infoImg">
+                    <img src="./assets/marlene.JPG">
+                </div>
+                <div id="infoContent">
+                    <li>Year: 3rd Year</li>
+                    <li>Major: Computer Science</li>
+                    <li>Favorite thing about BoG: 
+                        Meeting really cool people that I can learn from :)
+                    </li>
+                    <li>Fun Fact: I play the guitar</li>
+                </div>
+            </div>
+        </ul> -->
+
+
+    </main>
+    <ul id="info">
+        <div id="calciferBoi">
+            <img src="./assets/calcifer/one.png">
         </div>
-        <div class="aboutTxt">
-            <h1>About Emily</h1>
-            <h2>Hometown</h2>
-                <p>Long Island, New York</p>
-            <h2>Age</h2>
-                <p>20</p>
-            <h2>Major</h2>
-                <p>Computer Science</p>
-            <h2>Year</h2>
-                <p>Second Year</p>
-            <h2>Fun Fact</h2>
-                <p>I like to sing!</p>
+        <div id="infoColor">
+            <div id="infoImg">
+                <img src="./assets/marlene.JPG">
+            </div>
+            <div class="infoContent">
+                <li><span>Year:</span>&nbsp 2nd Year</li>
+                <li><span>Major:</span>&nbsp Computer Science</li>
+                <li><span>Favorite thing about BoG:</span>&nbsp
+                    Everyone is really nice and funny!
+                </li>
+                <li><span>Fun Fact:</span>&nbsp  I like to sing</li>
+                <div id="Social">
+                    <a href="www.linkedin.com/in/emily-l-92862b150"><img src="assets/linkedin-brands.svg" width="50" height="50"></a>
+                    <a href="https://github.com/EmilyAL001"><img src="assets/github-brands.svg" width="50" height="50"></a>
+                </div>
+
+            </div>
         </div>
-    </div>
-    <script src="./index.js"></script>
+    </ul>
+    <script src="index.js"></script>
 </body>
 
 </html>
