Finished Personal Page!

--- a/cohorts/1/emily.html
+++ b/cohorts/1/emily.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Marlene</title>
+    <title>Emily</title>
     <link rel="stylesheet" href="index.css" />
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&display=swap" rel="stylesheet" />
     <script src="https://use.fontawesome.com/d1341f9b7a.js"></script>
@@ -12,7 +12,7 @@
     <!--Text Animation Start-->
     <div class="container">
         <span class="TopText">Meet The Team</span>
-        <span class="BottomText">Marlene Garcia</span>
+        <span class="BottomText">Emily Layton</span>
     </div>
     <!--Text Animation End-->
     <header>
@@ -140,21 +140,20 @@
 
 
     </main>
-    <ul id="info">
+    <ul id="If2">
         <div id="calciferBoi">
-            <img src="./assets/calcifer/one.png">
+            <img src="./assets/calcifer/seven.png">
         </div>
-        <div id="infoColor">
-            <div id="infoImg">
-                <img src="./assets/marlene.JPG">
+        <div id="infoC2">
+            <div id="infoI2">
+                <img src="./assets/EmilyPhoto.jpg">
             </div>
-            <div class="infoContent">
-                <li><span>Year:</span>&nbsp 2nd Year</li>
-                <li><span>Major:</span>&nbsp Computer Science</li>
-                <li><span>Favorite thing about BoG:</span>&nbsp
-                    Everyone is really nice and funny!
-                </li>
-                <li><span>Fun Fact:</span>&nbsp  I like to sing</li>
+            <div class="infoCont2">
+                <li><span><strong>Year:</strong></span>&nbsp 2nd Year</li>
+                <li><span><strong>Major:</strong></span>&nbsp Computer Science</li>
+                <li><span><strong>Favorite thing about BoG:</strong></span>&nbsp 
+                    Everyone is really nice and funny!</li>
+                <li><span><strong>Fun Fact:</strong></span>&nbsp  I like to sing</li>
                 <div id="Social">
                     <a href="www.linkedin.com/in/emily-l-92862b150"><img src="assets/linkedin-brands.svg" width="50" height="50"></a>
                     <a href="https://github.com/EmilyAL001"><img src="assets/github-brands.svg" width="50" height="50"></a>
