added contact us page

--- a/cohorts/1/index.html
+++ b/cohorts/1/index.html
@@ -118,38 +118,29 @@
     </header>
     <main>
         <!-- <h1>Title lipsum</h1> -->
-        <h2>Subtitle lipsum</h2>
-        <p>Lucas ipsum dolor sit amet solo anakin anakin skywalker wookiee darth kenobi kenobi bespin yoda. Dantooine
-            yoda coruscant jinn sebulba aayla hutt organa. Solo calrissian mustafar organa lando. Anakin mara palpatine
-            boba mon. Alderaan utapau kenobi organa boba darth vader. Alderaan c-3po owen bespin windu fett ackbar windu
-            solo. Kenobi darth lobot utapau leia maul kenobi fett fett. Mon solo moff antilles kenobi k-3po. Grievous
-            dooku tusken raider grievous. Jabba luuke ewok yoda solo amidala darth owen.
-
-            Calrissian cade jade organa c-3p0 moff anakin palpatine han. Skywalker coruscant darth tatooine skywalker
-            moff solo wampa. Jar kessel jade watto darth. Secura binks darth organa darth fett tatooine hutt. Droid
-            alderaan mace kamino endor sidious darth zabrak. Kashyyyk ackbar organa obi-wan. Binks c-3p0 endor hutt moff
-            c-3p0. Yoda hutt fett sith watto mon solo binks. Obi-wan hutt organa skywalker bothan coruscant moff hutt.
-            Chewbacca ventress amidala moff dooku mon owen skywalker r2-d2. Lobot sith boba padmé tatooine c-3p0
-            kashyyyk kashyyyk darth.
-
-            Kenobi tatooine windu moff hutt. Binks ackbar mothma fett kenobi organa tatooine binks solo. Ackbar
-            mandalorians han han obi-wan gamorrean qui-gonn dooku. Vader leia qui-gon mon. Moff mandalore lars ackbar.
-            Jawa utapau wedge yavin darth anakin hutt antilles. Hutt organa obi-wan skywalker naboo naboo grievous.
-            Secura vader qui-gon kessel. Solo mace sidious darth sidious alderaan mustafar dooku ben. C-3p0 mara utapau
-            yavin watto antilles. Darth binks vader jango padmé kashyyyk yavin r2-d2 hutt. Anakin mace mara bespin c-3p0
-            ventress solo antilles anakin.
-
-            Leia ben anakin solo binks mon zabrak mara. Hutt fett darth sidious. Ben moff jango bothan skywalker vader
-            anakin skywalker. Organa darth coruscant hutt mace. Twi'lek kamino qui-gon grievous kessel mace. Hutt yoda
-            gonk darth leia ewok. Fisto lars skywalker gamorrean solo. Luke chewbacca droid darth qui-gonn. Anakin fett
-            sith wicket ackbar solo mandalorians. Endor moff organa zabrak anakin chewbacca. Moff darth cade aayla lando
-            jabba ahsoka. Kenobi amidala fett ponda skywalker darth. Lando obi-wan antilles mace windu lando obi-wan.
-
-            Amidala jade r2-d2 mon dagobah secura. Antilles antilles lobot sidious fett luke fett luke. Sith binks yoda
-            mace sith. Kashyyyk moff leia binks leia jinn. Darth mandalorians ewok jango tusken raider skywalker sidious
-            darth. Binks antilles hutt binks darth mon jade fett k-3po. Calrissian mon twi'lek antilles watto skywalker
-            greedo lando. Mon sebulba jar solo jade binks kessel ben lando. Jawa wedge organa maul jabba. Sith amidala
-            hutt darth ponda. Darth thrawn organa fett antilles. Anakin maul vader luke yoda. </p>
+        <div>
+            <img src="https://media.giphy.com/media/qKmWi9mfycx6E/giphy.gif" alt="Hypertext Assassins Mascot: Calcifer the flame">
+        </div>
+        <div class="intro">
+            <h2 class="motto">
+                Sparking joy one flame at a time! &emsp;<img src="./assets/fire-solid.svg">
+            </h2>
+            <h2>Who we are?</h2>
+            <p>
+                We are a super secret society dedicated to learning the fundamentals of application development with the 
+                long-term goal of being able to help non-profits.
+            </p>
+            <p>
+                As part of Bits of Good, we have been learning html, css, and javascript so far. This is an application of 
+                what we have learned so far, as well as the large room we have for improvement!
+            </p>
+            <p>
+                We are very excited to learn more about frontend and/or backend development as we wrap up this semester.
+            </p>
+            <p>
+                Learn More about our members by using the navigation bar on your left!
+            </p>
+        </div>
     </main>
     <script src="index.js"></script>
 </body>
