--- a/cohorts/1/index.html
+++ b/cohorts/1/index.html
@@ -125,7 +125,7 @@
             <h2 class="motto">
                 Sparking joy one flame at a time! &emsp;<img src="./assets/fire-solid.svg">
             </h2>
-            <h2>Who we are?</h2>
+            <h2>Who are we?</h2>
             <p>
                 We are a super secret society dedicated to learning the fundamentals of application development with the 
                 long-term goal of being able to help non-profits.
