--- a/cohorts/3/index.html
+++ b/cohorts/3/index.html
@@ -6,7 +6,7 @@
 <body onload="randomPerson()">
     <main>
         <img id = "bigcorgi" src = "https://camo.githubusercontent.com/504e0397da3d336b7292a8eae06a83caf90d490b/68747470733a2f2f692e70696e696d672e636f6d2f6f726967696e616c732f63612f37382f39392f63613738393933613436386138333531393762326533343064633231346364312e6a7067">
-        <h1 id = "title"></h1>
+        <h1 id = "title"> COHORT CORGI</h1>
         <p id = "motto"></p>
         <div id="main-body">
             <h2> COHORT MEMBERS </h2>
