Added about me info to kirtana.html

--- a/cohorts/1/kirtana.html
+++ b/cohorts/1/kirtana.html
@@ -148,15 +148,15 @@
                 <img src="#">
             </div>
             <div class="infoContent">
-                <li><span>Year:</span>&nbsp </li>
-                <li><span>Major:</span>&nbsp </li>
+                <li><span>Year:</span>&nbsp 2nd Year</li>
+                <li><span>Major:</span>&nbsp Computer Science</li>
                 <li><span>Favorite thing about BoG:</span>&nbsp
-                    
+                    Learning new web development tools and learning from others :)
                 </li>
-                <li><span>Fun Fact:</span>&nbsp </li>
+                <li><span>Fun Fact:</span>&nbsp I am a black belt in Tae Kwon Do</li>
                 <div id="Social">
-                    <a href="#"><img src="assets/linkedin-brands.svg" width="50" height="50"></a>
-                    <a href="#"><img src="assets/github-brands.svg" width="50" height="50"></a>
+                    <a href="https://www.linkedin.com/in/kirtana-mogili-95128b179/"><img src="assets/linkedin-brands.svg" width="50" height="50"></a>
+                    <a href="https://github.com/kirtanamogili"><img src="assets/github-brands.svg" width="50" height="50"></a>
                 </div>
 
             </div>
