Added images to kirtana.html

--- a/cohorts/1/kirtana.html
+++ b/cohorts/1/kirtana.html
@@ -141,11 +141,11 @@
     </main>
     <ul id="info">
         <div id="calciferBoi">
-            <img src="assets/calcifer/six.png">
+            <img src="assets/calcifer/five.png">
         </div>
         <div id="infoColor">
             <div id="infoImg">
-                <img src="#">
+                <img src="./assets/kirtana.jpg">
             </div>
             <div class="infoContent">
                 <li><span>Year:</span>&nbsp 2nd Year</li>
