--- a/cohorts/6/index.html
+++ b/cohorts/6/index.html
@@ -38,9 +38,8 @@
           <h1>Stephanie Luo</h1>
           <p class="title">The Hardworking Crewmate</p>
           <p id = "button">
-            <a href = "https://github.com/GTBitsOfGood/bootcamp/tree/fall-2020/UtterNonsense-Stephanie"
-            >
-              Steph's GitHub Branch
+            <a href >
+              MouseOver Me & Click the image below for a Surprise! 
             </a>
           </p>
           <img src="happyFace.jpg" style="width: 327px;height: 300px; border-radius:0px 0px 15px 15px;" />
@@ -54,9 +53,8 @@
           <h1>Nidhisha Dasari</h1>
           <p class="title">The Sus One</p>
           <p id = "button">
-            <a href="https://github.com/GTBitsOfGood/bootcamp/tree/fall-2020/UtterNonsense-nidhisha"
-            >
-              Nidhisha's GitHub Branch
+            <a href>
+              MouseOver Me!
             </a>
           </p>
           <img src="pickleRick.jpg" style="width: 350px; height: 300px; border-radius:0px 0px 15px 15px;" />
@@ -66,9 +64,8 @@
         <h1>Jacob Weinman</h1>
         <p class="title">The Imposter</p>
         <p id = "button">
-          <a href = "https://github.com/GTBitsOfGood/bootcamp/tree/fall-2020/UtterNonsense-Jacob"
-          >
-            Jacob's GitHub Branch
+          <a href>
+            MouseOver Me!
           </a>
         </p>
         <img src="3.png" style="width: 327px; height: 300px; border-radius:0px 0px 15px 15px;" /> 
